# OpenStreetMap-Ship-Routing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  make_release.sh
include/: CMakeLists.txt
include/cmake/modules/: Findosmpbf.cmake
include/osmpbfreader/: CMakeLists.txt  osmpbfreaderConfig.cmake
include/osmpbfreader/cmake/: osmpbfreaderConfig.cmake.in
scripts/: generatePartitionString.py
src/: A_star_simon.cpp  BiDirectDijkstra_marcel.cpp  Bidirectional_Dijkstra_simon.cpp  CH_Astar_simon.cpp  CH_preprocessing.cpp  CH_preprocessing_simon.cpp  CH_query_simon.cpp  CMakeLists.txt  ChQuery_marcel.cpp  ContractionHierachies_marcel.cpp  Dijkstra.cpp  Dijkstra_simon.cpp  MultiDijkstra.cpp  MultiDijkstra_simon.cpp  PathAlgorithm.cpp  benchmarkDijkstra.cpp  benchmarkPathAlgorithm.cpp  buildGraph.cpp  costlineExtraction.cpp  dijkstra.cpp  example_counter.cpp  example_routing.cpp  fileUtils.cpp  main.cpp  pointInPolygon.cpp  server.cpp  shortestPathUtils.cpp  test.cpp  test_single_query.cpp
src/lib/: osmpbfreader.h
src/noLongerRequired/: Dijkstra_marcel.cpp
static/: index.html
